UI Tweaks, externalized properties, hash linking

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -17,9 +17,12 @@
 		<script src="assets/js/colorpicker/jquery.colorpicker.js"></script>
 
     </head>
-    <body>
+    <body class="loading">
 		<div id="content">
 			<div id="framerate"></div>
+			<div id="stageColorContainer">
+				<input id="stageColor" type="text" class="colorPicker" value="999999" />
+			</div>
 			<canvas id="stage" width="800" height="500"></canvas>
 		</div>
 		<div id="editor">
