Fix megaman death

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -165,7 +165,7 @@
 			<div id="emitLife" class="clearfix option">
 				<div class="category" title="Lifetime of the emitter in seconds before it disables itself">Emitter Lifetime</div>
 				<div class="fields">
-					<input id="emitLifetime" type="text" class="generalSpinner spinner" />
+					<input id="emitLifetime" type="text" class="positiveSpinner spinner" />
 				</div>
 			</div>
 			<div id="maxParticles" class="clearfix option">
