Improved spinner sizing. Added blend mode support.
Also updated to latest CloudKidFramework.

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -125,6 +125,30 @@
 					<input id="lifeMax" type="text" class="positiveSpinner spinner" />
 				</div>
 			</div>
+			<div id="blend" class="clearfix option">
+				<div class="category" title="Blend mode of particles. Use of blend modes may harm performance. Older browsers may not support them.">Blend Mode</div>
+				<div class="fields">
+					<select id="blendMode">
+						<option selected="selected" value="normal">Normal</option>
+						<option value="add">Add</option>
+						<option value="multiply">Multiply</option>
+						<option value="screen">Screen</option>
+						<option value="overlay">Overlay (Canvas2D Only)</option>
+						<option value="darken">Darken (Canvas2D Only)</option>
+						<option value="lighten">Lighten (Canvas2D Only)</option>
+						<option value="color_dodge">Color Dodge (Canvas2D Only)</option>
+						<option value="color_burn">Color Burn (Canvas2D Only)</option>
+						<option value="hard_light">Hard Light (Canvas2D Only)</option>
+						<option value="soft_light">Soft Light (Canvas2D Only)</option>
+						<option value="difference">Difference (Canvas2D Only)</option>
+						<option value="exclusion">Exclusion (Canvas2D Only)</option>
+						<option value="hue">Hue (Canvas2D Only)</option>
+						<option value="saturation">Saturation (Canvas2D Only)</option>
+						<option value="color">Color (Canvas2D Only)</option>
+						<option value="luminosity">Luminosity (Canvas2D Only)</option>
+					</select>
+				</div>
+			</div>
 			<div id="ease" class="clearfix option">
 				<div class="category" title="Custom ease, as shown by the array output by http://www.greensock.com/customease/">Custom Ease</div>
 				<div class="fields">
