New examples and defaults!

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -37,12 +37,22 @@
 					<option value="trail">Trail</option>
 					<option value="flame">Flame</option>
 					<option value="gas">Gas</option>
-					<option value="explosion">Explosion</option>
-					<option value="explosion2">Explosion Alt.</option>
+					<option value="explosion">Explosion 1</option>
+					<option value="explosion2">Explosion 2</option>
+					<option value="explosion3">Explosion 3</option>
 					<option value="megamanDeath">Megaman Death</option>
 					<option value="rain">Rain</option>
 					<option value="pixieDust">Pixie Dust</option>
 					<option value="smoke">Smoke</option>
+					<option value="bubbles">Bubbles</option>
+					<option value="bubbleStream">Bubble Stream</option>
+					<option value="bubbleSpray">Bubble Spray</option>
+					<option value="bubblesVertical">Vertical Bubbles</option>
+					<option value="cartoonSmoke">Cartoon Smoke</option>
+					<option value="cartoonSmokeBlast">Cartoon Smoke Blast</option>
+					<option value="pixelTrail">Pixel Trail</option>
+					<option value="snow">Snow</option>
+					<option value="sparks">Sparks</option>
 				</select>
 				<input id="configUpload" type="file" accept='text/json' />
 				<textarea id="configPaste" class="ui-autocomplete-input" rows="5"></textarea>
@@ -177,7 +187,18 @@
 					<option selected="selected">-Default Images-</option>
 					<option value="assets/images/particle.png">particle.png</option>
 					<option value="assets/images/smokeparticle.png">smokeparticle.png</option>
-					<option value="assets/images/rain.png">rain.png</option>
+					<option value="assets/images/HardRain.png">HardRain.png</option>
+					<option value="assets/images/Bubbles50px.png">Bubbles50px.png</option>
+					<option value="assets/images/Bubbles99px.png">Bubbles99px.png</option>
+					<option value="assets/images/CartoonSmoke.png">CartoonSmoke.png</option>
+					<option value="assets/images/Fire.png">Fire.png</option>
+					<option value="assets/images/Pixel100px.png">Pixel100px.png</option>
+					<option value="assets/images/Pixel50px.png">Pixel50px.png</option>
+					<option value="assets/images/Pixel25px.png">Pixel25px.png</option>
+					<option value="assets/images/Snow100px.png">Snow100px.png</option>
+					<option value="assets/images/Snow50px.png">Snow50px.png</option>
+					<option value="assets/images/Sparks.png">Sparks.png</option>
+					<option value="assets/images/HardCircle.png">HardCircle.png</option>
 				</select>
 				<input id="imageUpload" type="file" multiple accept='image/*' />
 			</div>
