--- a/deploy/index.html
+++ b/deploy/index.html
@@ -3,18 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Particle Editor</title>
-        <meta name="description" content="Particle Editor">
+        <title>PixiParticlesEditor</title>
+        <meta name="description" content="PixiParticlesEditor">
 
-        <link rel="stylesheet" href="assets/css/libraries.css">
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="assets/css/libraries.css?v=0.1.0">
+        <link rel="stylesheet" href="assets/css/main.css?v=0.1.0">
 
-		<link href="assets/js/jquery-ui-smoothness/jquery-ui.min.css" rel="stylesheet">
-		<link href="assets/js/colorpicker/jquery.colorpicker.css" rel="stylesheet">
+		<link href="assets/js/jquery-ui-smoothness/jquery-ui.min.css?v=0.1.0" rel="stylesheet">
+		<link href="assets/js/colorpicker/jquery.colorpicker.css?v=0.1.0" rel="stylesheet">
 		
-		<script src="assets/js/jquery-ui-smoothness/external/jquery/jquery.js"></script>
-		<script src="assets/js/jquery-ui-smoothness/jquery-ui.min.js"></script>
-		<script src="assets/js/colorpicker/jquery.colorpicker.js"></script>
+		<script src="assets/js/jquery-ui-smoothness/external/jquery/jquery.js?v=0.1.0"></script>
+		<script src="assets/js/jquery-ui-smoothness/jquery-ui.min.js?v=0.1.0"></script>
+		<script src="assets/js/colorpicker/jquery.colorpicker.js?v=0.1.0"></script>
 
     </head>
     <body class="loading">
@@ -175,7 +175,7 @@
 					</button>
 					<div id="imageList">
 						<div class="particleImage">
-							<img class="actualImage" src="assets/images/particle.png" />
+							<img class="actualImage" src="assets/images/particle.png?v=0.1.0" />
 							<button class="download"></button>
 							<button class="remove"></button>
 						</div>
@@ -315,15 +315,7 @@
 			</div>
 			<footer>CloudKid 2014, smoke particle image from http://stemkoski.github.io/Three.js/images/smokeparticle.png</footer>
 		</div>
-		<script src="assets/js/libraries.js"></script>
-		<script src="assets/js/main.js"></script>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-			ga('create', 'UA-54925270-1', 'auto');
-			ga('send', 'pageview');
-		</script>
+		<script src="assets/js/libraries.js?v=0.1.0"></script>
+		<script src="assets/js/main.js?v=0.1.0"></script>
     </body>
 </html>
