--- a/deploy/index.html
+++ b/deploy/index.html
@@ -44,7 +44,7 @@
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button type="button" class="btn btn-primary">Open</button>
+					<button type="button" id="configConfirm" class="btn btn-primary">Open</button>
 				</div>
 			</div>
 		</div>
