Fixed small layout issue

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -93,7 +93,9 @@
 				</div>
 				<div class="form-group">
 					<div class="col-xs-4 form-label"  data-toggle="tooltip"  data-placement="left" title="A value between minimum scale multipler and 1 is randomly generated and multiplied with start scale and end scale to provide the actual start scale and end scale for each particle.">Minimum Scale Multiplier</div>
-					<input id="minimumScaleMultiplier" type="text" data-min="0.001" data-step="0.01" data-decimals="2" class="spinner form-control" />
+					<div class="col-xs-8">
+						<input id="minimumScaleMultiplier" type="text" data-min="0.001" data-step="0.01" data-decimals="2" class="spinner form-control" />
+					</div>
 				</div>
 				<div id="color" class="form-group">
 					<div class="col-xs-4 form-label" data-toggle="tooltip"  data-placement="left" title="Color of the particles">Color</div>
